--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,18 @@ edition = "2021"
 
 [dependencies]
 cxx = "1.0"
+thiserror = "2.0"
+color-eyre = "0.6"
+tracing = "0.1"
+tracing-subscriber = "0.3"
+http = "1.0"
+httparse = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_urlencoded = "0.7"
+chrono = "0.4"
+urlencoding = "2.0"
+uuid = "1.0"
 
 [build-dependencies]
 cxx-build = "1.0"
