--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ serde_urlencoded = "0.7"
 chrono = "0.4"
 urlencoding = "2.0"
 uuid = "1.0"
+parking_lot = "0.12"
+bytes = "1.0"
+crossbeam = "0.8"
 
 [build-dependencies]
 cxx-build = "1.0"
