--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,12 +6,13 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 cmake_minimum_required(VERSION 3.15)
 project(${PROJECT_NAME} LANGUAGES C)
 
-set(EXTERNAL_DIR ${CMAKE_CURRENT_LIST_DIR}/../deps)
+set(EXTERNAL_DIR deps)
 
-add_subdirectory(${EXTERNAL_DIR}/expected ${CMAKE_BINARY_DIR}/expected)
 include(${CMAKE_CURRENT_LIST_DIR}/lua.cmake)
 
-file(GLOB_RECURSE SRC_FILES src/*.c)
+set(SRC_FILES
+	src/main.c
+)
 
 add_executable(${PROJECT_NAME} ${SRC_FILES})
 
@@ -22,5 +23,4 @@ target_include_directories(${PROJECT_NAME} PRIVATE
 target_link_libraries(${PROJECT_NAME} PRIVATE
 	m
 	lua
-	expected
 )
