--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,13 @@ name = "kimyo"
 version = "0.1.0"
 edition = "2024"
 
-[lib]
-crate-type = ["cdylib"]
+# [lib]
+# crate-type = ["cdylib"]
 
 [dependencies]
+mlua = { version = "0.9", features = ["lua54", "vendored","async"] }
+tokio = { version = "1", features = ["full"] }
 color-eyre = "0.6"
-mlua = { version = "0.9", features = ["lua54", "module"] }
 thiserror = "2.0"
 tracing = "0.1"
 tracing-subscriber = "0.3"
