--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,8 @@ name = "kimyo"
 version = "0.1.0"
 edition = "2024"
 
-# [lib]
-# crate-type = ["cdylib"]
-
 [dependencies]
-mlua = { version = "0.9", features = ["lua54", "vendored","async"] }
+mlua = { version = "0.11", features = ["lua54", "vendored","async","send","userdata-wrappers"] }
 tokio = { version = "1", features = ["full"] }
 thiserror = "2.0"
 tracing = "0.1"
