feat: lua LSP support, more methods to ctx, split HttpStatus and HttpMethod from http mudule
now I can add documentation for lua LSP using the `stubs/kimyo.lua` file

I also added methods like `ctx:set_res_header`, `ctx:set_res_status` and
`ctx:send_string`

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,7 +1,12 @@
 {
+  "workspace": {
+    "library": [
+      "./stubs"
+    ],
+    "checkThirdParty": false
+  },
   "diagnostics.globals": [
     "vim",
     "kimyo"
   ]
 }
-
